<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="adapter"
            type="com.waitty.kitchen.adapter.OrderHistoryAdapter"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardUseCompatPadding="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/txtWaiterID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorSkipWelcome"
                        android:textSize="@dimen/_8ssp"
                        android:fontFamily="@font/p_light"/>

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@+id/txtWaiterID"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorNextWelcome"
                        android:textSize="@dimen/_9ssp"
                        android:fontFamily="@font/p_medium"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layLinETA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSkipWelcome"
                        android:text="@string/txt_eta"
                        android:textSize="@dimen/_8ssp"
                        android:fontFamily="@font/p_regular"/>

                    <EditText
                        android:id="@+id/edtETA"
                        android:digits="@string/digit_number"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorNextWelcome"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_8ssp"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:hint="@string/txt_minutes"
                        android:gravity="center"
                        android:singleLine="true"
                        android:maxLength="3"
                        android:background="@drawable/round_eta"
                        android:fontFamily="@font/p_regular"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>

                    <TextView
                        android:id="@+id/txtCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorValidation"
                        android:textSize="@dimen/_10ssp"
                        android:fontFamily="@font/p_regular"
                        android:gravity="end"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_9sdp">

                    <TextView
                        android:id="@+id/txtTableNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/colorNextWelcome"
                        android:textSize="@dimen/_22ssp"
                        android:fontFamily="@font/p_semibold"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@+id/txtInvisible"
                        android:layout_marginEnd="@dimen/_5sdp"/>

                    <TextView
                        android:id="@+id/txtInvisible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:text="@string/txt_take_away"
                        android:background="@drawable/round_take_away"
                        android:textColor="@color/colorNextWelcome"
                        android:textSize="@dimen/_7ssp"
                        android:visibility="invisible"
                        android:fontFamily="@font/p_medium"/>

                    <TextView
                        android:id="@+id/txtOrderType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:background="@drawable/round_selected_submenu"
                        android:textColor="@color/colorNextWelcome"
                        android:textSize="@dimen/_7ssp"
                        android:fontFamily="@font/p_medium"/>

                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcvItem"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:id="@+id/viewLineComment1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorCircleImageShadow"/>

                <TextView
                    android:id="@+id/txtComment"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textColor="@color/colorValidation"
                    android:textSize="@dimen/_6ssp"
                    android:fontFamily="@font/p_light"/>

                <View
                    android:id="@+id/viewLineComment2"
                    android:visibility="gone"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorCircleImageShadow"/>

                <TextView
                    android:id="@+id/txtStartPreparing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:background="@color/colorOrderReady"
                    android:text="@string/txt_start_preparing"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/p_semibold"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</layout>

